--- a/client/index.html
+++ b/client/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="./src//assets/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travela</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
+    <meta key="title" content="Travela" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="A better place for the guest to find the best places to visit."
       property="og:description"
     />
     <meta
-      content="Make beautiful websites regardless of your design experience."
+      content="A better place for the guest to find the best places to visit."
       name="description"
     />
     <meta
